; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_agraph.c_RM_listcmp.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_agraph.c_RM_listcmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.len_pos_t = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.len_pos_t*, %struct.len_pos_t*)* @RM_listcmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @RM_listcmp(%struct.len_pos_t* %0, %struct.len_pos_t* %1) #0 {
  %3 = alloca %struct.len_pos_t*, align 8
  %4 = alloca %struct.len_pos_t*, align 8
  store %struct.len_pos_t* %0, %struct.len_pos_t** %3, align 8
  store %struct.len_pos_t* %1, %struct.len_pos_t** %4, align 8
  %5 = load %struct.len_pos_t*, %struct.len_pos_t** %3, align 8
  %6 = getelementptr inbounds %struct.len_pos_t, %struct.len_pos_t* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.len_pos_t*, %struct.len_pos_t** %4, align 8
  %9 = getelementptr inbounds %struct.len_pos_t, %struct.len_pos_t* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp slt i64 %7, %10
  %12 = zext i1 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
